--- a/management/src/main/resources/config.properties
+++ b/management/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 jms.url=tcp://localhost:61616
-jms.orderQueue.name=jms.order.queue
+jms.reportQueue.name=jms.reportQueue.queue
+jms.errorQueue.name=jms.errorQueue.queue
