--- a/receiver-library/src/main/resources/library.properties
+++ b/receiver-library/src/main/resources/library.properties
@@ -1,3 +1,4 @@
 jms.url=tcp://localhost:61616
 jms.orderQueue.name=jms.order.queue
 jms.reportQueue.name=jms.report.queue
+jms.errorQueue.name=jms.error.queue
