--- a/management/src/main/resources/config.properties
+++ b/management/src/main/resources/config.properties
@@ -1,3 +1,3 @@
 jms.url=tcp://localhost:61616
-jms.reportQueue.name=jms.reportQueue.queue
-jms.errorQueue.name=jms.errorQueue.queue
+jms.reportQueue.name=jms.report.queue
+jms.errorQueue.name=jms.error.queue
