--- a/management/src/main/webapp/WEB-INF/web.xml
+++ b/management/src/main/webapp/WEB-INF/web.xml
@@ -31,6 +31,27 @@
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+		
+	<!-- Check why it doesn't work -->
+	<filter>
+	    <filter-name>OpenEntityManagerInViewFilter</filter-name>
+	    <filter-class>
+	        org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
+	    </filter-class>
+	      <init-param>
+			<param-name>singleSession</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>  
+			<param-name>flushMode</param-name>  
+			<param-value>AUTO</param-value>  
+		</init-param> 
+	</filter>
+	<!-- Include this if you are using Hibernate -->
+	<filter-mapping>
+	    <filter-name>OpenEntityManagerInViewFilter</filter-name>
+	     <url-pattern>/*</url-pattern>
+	</filter-mapping>
 	
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -38,6 +59,8 @@
 	<listener>
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
-	
+	<listener>
+	    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+	</listener>
 	
 </web-app>
