--- a/taxi-service/pom.xml
+++ b/taxi-service/pom.xml
@@ -69,6 +69,11 @@
 			<version>1.2.14</version>
 		</dependency>
 		
+		<dependency>
+	        <groupId>org.apache.tomcat</groupId>
+	        <artifactId>tomcat-jsp-api</artifactId>
+	        <version>7.0.28</version>
+	    </dependency>
 	</dependencies>
 	
 	<build>
