1. Deleted receiver modules 2. added router module 3. implementer module logic related to receiving orders, ReportDao, TaxiDispatcherDao, basic configs 4. project opened in idea

--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
 	<modules>
 		<module>sender</module>
 		<module>core</module>
-		<module>receiver</module>
+        <module>router</module>
 		<module>management</module>
 		<module>receiver-library</module>
-    <module>taxi-service</module>
-  </modules>
-  
+        <module>taxi-service</module>
+    </modules>
+
   <build>
   	<plugins>
 		<plugin>
