1. Updated domain model 2.  Added router module with receiving message 3. Upated sender according to new domain model

--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 		<module>sender</module>
 		<module>core</module>
         <module>router</module>
-		<module>management</module>
-		<module>receiver-library</module>
-        <module>taxi-service</module>
+		<!--<module>management</module>-->
+		<!--<module>receiver-library</module>-->
+        <!--<module>taxi-service</module>-->
     </modules>
 
   <build>
