--- a/router/src/main/resources/jdbc.properties
+++ b/router/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.url=jdbc:mysql://localhost:3306/cdp_management
+jdbc.url=jdbc:mysql://localhost:3306/cdp_taxi_service
 jdbc.hostname=localhost
 jdbc.username=root
 jdbc.password=12345
