--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,8 +15,14 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.2</version>
 		</dependency>
-		
-		<!-- Apache commons io -->
+        <!-- Jadira instead of joda-->
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.1.0.CR10</version>
+        </dependency>
+
+        <!-- Apache commons io -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-io</artifactId>
@@ -32,7 +38,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.1.9.Final</version>
+			<version>4.3.1.Final</version>
 		</dependency>
 	</dependencies>
 </project>
