1. send BookingRequset through xml message. Implemented XML serializer 2. Implemented new model of taxi-service module. 3. implemented entities, services for new domain model 4. Partially Updated jms

--- a/router/pom.xml
+++ b/router/pom.xml
@@ -57,7 +57,6 @@
             <version>2.5</version>
         </dependency>
 
-
         <!-- ActiveMQ -->
         <dependency>
             <groupId>org.apache.activemq</groupId>
@@ -110,6 +109,13 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.2</version>
+        </dependency>
+
+        <!-- XStream XML parser -->
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.7</version>
         </dependency>
     </dependencies>
     <build>
