--- a/taxi-service/src/main/resources/config.properties
+++ b/taxi-service/src/main/resources/config.properties
@@ -1,1 +1,4 @@
-taxiId=Taxi service 2
+taxiId=Aviz Taxi Service
+jms.url=tcp://localhost:61616
+jms.inputQueue.name=aviz.input.queue
+jms.failQueue.name=jms.fail.queue
