implementing functionality to work with router REST service updated domain model updated controller and jsp to work with new domain model

--- a/taxi-service/pom.xml
+++ b/taxi-service/pom.xml
@@ -113,6 +113,13 @@
             <artifactId>joda-time</artifactId>
             <version>2.2</version>
         </dependency>
+        <!-- JodaTime JSP tags -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time-jsptags</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+
 
         <!-- XStream XML parser -->
         <dependency>
