--- a/taxi-service/src/main/resources/config.properties
+++ b/taxi-service/src/main/resources/config.properties
@@ -2,3 +2,5 @@ taxiId=Aviz Taxi Service
 jms.url=tcp://localhost:61616
 jms.inputQueue.name=aviz.input.queue
 jms.failQueue.name=jms.fail.queue
+
+router.rest.url=http://localhost:8080/router/order/execute
