--- a/management/src/main/resources/jdbc.properties
+++ b/management/src/main/resources/jdbc.properties
@@ -1,6 +1,6 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQLDialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/cdp_management?zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://localhost:3306/cdp_taxi_service
 jdbc.hostname=localhost
 jdbc.username=root
 jdbc.password=12345
