--- a/router/src/main/resources/config.properties
+++ b/router/src/main/resources/config.properties
@@ -1,2 +1,3 @@
 jms.url=tcp://localhost:61616
-jms.input.order.queue=input.order.queue
+jms.input.order.queue.name=input.order.queue
+jms.fail.queue.name=jms.fail.queue
