1. Taxi dispatcher selecting 2. Removed String id from ReservationRequest 3. handling Router REST-service unavailability from Taxi-service 4. Taxi-service - AssignToMe expiration added to periodic tasks

--- a/router/src/main/resources/config.properties
+++ b/router/src/main/resources/config.properties
@@ -1,3 +1,6 @@
 jms.url=tcp://localhost:61616
 jms.input.order.queue.name=input.order.queue
 jms.fail.queue.name=jms.fail.queue
+
+#Booking request that was sent to taxi service will be expired in X minutes
+booking.request.expiration=6
