--- a/taxi-service/src/main/resources/config.properties
+++ b/taxi-service/src/main/resources/config.properties
@@ -4,3 +4,5 @@ jms.taxi.input.queue.name=aviz.input.queue
 jms.fail.queue.name=jms.fail.queue
 
 router.rest.url=http://localhost:8080/router/order/execute
+#Time in minutes when booking becomes unassigned automatically
+local.assign.expiry.time=3
