--- a/sender/src/main/resources/log4j.properties
+++ b/sender/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, infofile, errorfile
 
 # Direct log messages to console(stdout)
 log4j.appender.stdout.Threshold=INFO
@@ -6,3 +6,21 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} SENDER%5p %c{1}:%L - %m%n
+
+# log into file with log level INFO
+log4j.appender.infofile=org.apache.log4j.RollingFileAppender
+log4j.appender.infofile.File=${catalina.home}/logs/sender_info.log
+log4j.appender.infofile.Threshold=INFO
+log4j.appender.infofile.MaxFileSize=4MB
+log4j.appender.infofile.MaxBackupIndex=1
+log4j.appender.infofile.layout=org.apache.log4j.PatternLayout
+log4j.appender.infofile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# log into file with log level ERROR
+log4j.appender.errorfile=org.apache.log4j.RollingFileAppender
+log4j.appender.errorfile.File=${catalina.home}/logs/sender_error.log
+log4j.appender.errorfile.Threshold=ERROR
+log4j.appender.errorfile.MaxFileSize=1MB
+log4j.appender.errorfile.MaxBackupIndex=1
+log4j.appender.errorfile.layout=org.apache.log4j.PatternLayout
+log4j.appender.errorfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
