--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,39 +8,37 @@
         <artifactId>cdp-jms</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
+
+    <groupId>com.epam.cdp.core</groupId>
     <artifactId>core</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- Joda time -->
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
-            <version>2.2</version>
         </dependency>
         <!-- Jadira instead of joda-->
         <dependency>
             <groupId>org.jadira.usertype</groupId>
             <artifactId>usertype.core</artifactId>
-            <version>3.1.0.CR10</version>
         </dependency>
 
         <!-- Apache commons io -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
         </dependency>
         <!-- Json parsing -->
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.2.2</version>
         </dependency>
 
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>4.3.1.Final</version>
         </dependency>
     </dependencies>
 </project>
