--- a/core/pom.xml
+++ b/core/pom.xml
@@ -27,7 +27,7 @@
 
         <!-- Apache commons io -->
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
         </dependency>
         <!-- Json parsing -->
