--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,9 @@
         <activemq-core.version>5.7.0</activemq-core.version>
         <tomcat-jsp-api.version>8.0.15</tomcat-jsp-api.version>
 
+        <jcip-annotations.version>1.0</jcip-annotations.version>
+        <findbugs.annotations.version>1.3.2</findbugs.annotations.version>
+
         <log4j.version>1.2.17</log4j.version>
         <gson.version>2.3.1</gson.version>
         <xstream.version>1.4.7</xstream.version>
@@ -47,6 +50,38 @@
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <commons-io.version>1.3.2</commons-io.version>
     </properties>
+
+    <profiles>
+        <profile>
+            <id>sca</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>findbugs-maven-plugin</artifactId>
+                        <version>3.0.0</version>
+                        <configuration>
+                            <effort>Max</effort>
+                            <threshold>Low</threshold>
+                            <xmlOutput>true</xmlOutput>
+                            <excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>check</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencyManagement>
         <dependencies>
@@ -148,6 +183,18 @@
                 <version>${activemq-core.version}</version>
             </dependency>
 
+            <!--Concurrent annotations-->
+            <dependency>
+                <groupId>net.jcip</groupId>
+                <artifactId>jcip-annotations</artifactId>
+                <version>${jcip-annotations.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sourceforge.findbugs</groupId>
+                <artifactId>annotations</artifactId>
+                <version>${findbugs.annotations.version}</version>
+            </dependency>
+
             <!-- JSP validators -->
             <dependency>
                 <groupId>org.apache.tomcat</groupId>
@@ -199,7 +246,7 @@
             </dependency>
 
             <dependency>
-                <groupId>org.apache.commons</groupId>
+                <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
                 <version>${commons-io.version}</version>
             </dependency>
@@ -228,6 +275,11 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
