--- a/sender/src/main/resources/config.properties
+++ b/sender/src/main/resources/config.properties
@@ -1,4 +1,6 @@
 jms.url=tcp://localhost:61616
 
-#ReservationRequest queue
-jms.input.order.queue.name=input.order.queue
+reservation.request.queue.name.request=reservation.request.queue.request
+reservation.request.queue.name.response=reservation.request.queue.response
+
+source.system.id=WEB
