--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <gson.version>2.3.1</gson.version>
         <xstream.version>1.4.7</xstream.version>
 
+        <guava.version>18.0</guava.version>
         <joda-time.version>2.6</joda-time.version>
         <joda-time-hibernate.version>1.3</joda-time-hibernate.version>
         <joda-time-jsptags.version>1.1.1</joda-time-jsptags.version>
@@ -224,6 +225,11 @@
                 <version>${xstream.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
