--- a/router/src/main/resources/config.properties
+++ b/router/src/main/resources/config.properties
@@ -1,5 +1,7 @@
 jms.url=tcp://localhost:61616
-jms.input.order.queue.name=input.order.queue
+
+reservation.request.queue.name.request=reservation.request.queue.request
+
 jms.fail.queue.name=jms.fail.queue
 
 #Booking request that was sent to taxi service will be expired in X minutes
