--- a/taxi-service/src/main/resources/config.properties
+++ b/taxi-service/src/main/resources/config.properties
@@ -3,6 +3,6 @@ jms.url=tcp://localhost:61616
 jms.taxi.input.queue.name=aviz.input.queue
 jms.fail.queue.name=jms.fail.queue
 
-router.rest.url=http://localhost:8080/router/order/execute
+router.rest.url=http://localhost:8080/router/order/
 #Time in minutes when booking becomes unassigned automatically
 local.assign.expiry.time=3
