--- a/taxi-service/src/main/resources/log4j.properties
+++ b/taxi-service/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, stdout, infofile, errorfile
+log4j.rootLogger=DEBUG, stdout, infofile, errorfile
 
 # Direct log messages to console(stdout)
 log4j.appender.stdout.Threshold=INFO
@@ -24,3 +24,6 @@ log4j.appender.errorfile.MaxFileSize=1MB
 log4j.appender.errorfile.MaxBackupIndex=1
 log4j.appender.errorfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.errorfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+log4j.logger.org.hibernate=INFO
+log4j.logger.org.springframework=INFO
