-fixed OptimisticLockException on Order creation -added posibility to edit fail queue message -getClientDetails on accept request -added termination pricedReservationRequest task

--- a/router/src/main/resources/config.properties
+++ b/router/src/main/resources/config.properties
@@ -6,3 +6,8 @@ jms.fail.queue.name=jms.fail.queue
 
 #Booking request that was sent to taxi service will be expired in X minutes
 booking.request.expiration=6
+
+#Expiration time for periodic tasks in milliseconds
+priced.reservation.request.termination.time=300000
+booking.request.termination.time=60000
+order.termination.time=60000
